[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Mark_Calc_2"
version = "0.0.1"
authors = [
       { name="makomaiza3213",      	email="makomaiza3213@gmail.com" },
	]
description = "Ejemplo de como crear un paquete"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/makomaiza3213/calc_2"